--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
-# requirements.txt - UPDATED
+# Detour Email Verification Service
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-requests==2.31.0
 python-jose[cryptography]==3.3.0
-python-multipart==0.0.6
-boto3==1.34.0
-python-dotenv==1.0.0
 passlib[bcrypt]==1.7.4
 pydantic==2.5.0
 pydantic-settings==2.1.0
-email-validator==2.1.0
-httpx
+python-dotenv==1.0.0
+python-multipart==0.0.6
+httpx==0.28.1
+email-validator==2.1.1
+
+# Comment out conflicting packages - use system versions
+# boto3  # Provided by App Runner environment
+# requests  # Provided by App Runner environment
+# botocore  # Provided by App Runner environment
