--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Detour Email Verification Service - FINAL WORKING VERSION
+# requirements.txt - FINAL WORKING VERSION
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-jose[cryptography]==3.3.0
@@ -9,10 +9,8 @@ python-dotenv==1.0.0
 python-multipart==0.0.6
 httpx==0.28.1
 email-validator==2.1.1
-
-# REQUIRED - App Runner doesn't provide these by default
-requests>=2.31.0
-
-# OPTIONAL - Let App Runner handle AWS packages
-# boto3  # App Runner's IAM role handles AWS auth
-# botocore  # Comes with boto3 if needed
+requests==2.31.0
+urllib3==1.26.20
+certifi==2023.11.17
+charset-normalizer==3.3.2
+idna==3.6
