--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# requirements.txt - FINAL WORKING VERSION
+# requirements.txt - COMPLETE WORKING VERSION
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-jose[cryptography]==3.3.0
@@ -14,3 +14,5 @@ urllib3==1.26.20
 certifi==2023.11.17
 charset-normalizer==3.3.2
 idna==3.6
+boto3==1.34.0  # <-- ADD THIS LINE
+botocore==1.34.162  # <-- ADD THIS LINE
