--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,66 @@
-# ---- Python ----
+# Python
 __pycache__/
 *.py[cod]
-*.pyo
-*.pyd
-*.pkl
-*.sqlite3
-
-# ---- Virtual Environment ----
-venv/
-env/
-ENV/
-.venv/
-
-# ---- Environment Variables ----
-.env
-.env.* 
-
-# ---- Logs ----
-*.log
-logs/
-email_debug.log
-email_log.json
-
-# ---- Cache / Build ----
-*.egg-info/
-*.egg
-.eggs/
-.build/
-dist/
+*$py.class
+*.so
+.Python
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# ---- IDE / Editor ----
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE
 .vscode/
 .idea/
 *.swp
+*.swo
 
-# ---- OS files ----
+# Logs
+logs/*.log
+!logs/.gitkeep
+
+# OS
 .DS_Store
 Thumbs.db
-
-# ---- Python tools ----
-pip-wheel-metadata/
-pytest_cache/
-.coverage
-.cache/
-
-# ---- Project Specific ----
-email_preview.html
-test_credentials.py
-test_email_service.py
-check_iam_permissions.py
